--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,7 +16,7 @@ Snappy - Login
                     <td>UserName:</td>
                     <td>{{form.username(size=50)}}</td>
                 </tr>
-                <tr class=""error">
+                <tr class="error">
                     <td></td>
                     <td>
                         <ul>
