- card sub types working

--- a/app/templates/vote.html
+++ b/app/templates/vote.html
@@ -111,7 +111,7 @@
             });
 
             socket.on('card_data_message', function(data) {
-
+                console.log(data);
                 if (data['card_image'] != '') {
                     document.getElementById("card_image").src = data['card_image'];
                 }
@@ -136,7 +136,7 @@
                     }
                 }
 
-                //
+                // check all card info varients
                 var cardinfo = document.getElementById("cardinfo");
                 var cardinfo_elements = cardinfo.getElementsByClassName("cardinfo_elements");
                 while (cardinfo_elements[0]) {
