--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,54 @@
-{% extends "base.html" %}
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Snappy Vote</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block title %}
-Snappy - Welcome
-{% endblock %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script src="../static/js/main.js"></script>
+        <script src="../static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 
-{% block content %}
+        <script type="text/javascript">
+            $(function(){
+            if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+              var ww = ( $(window).width() < window.screen.width ) ? $(window).width() : window.screen.width; //get proper width
+              var mw = 480; // min width of site
+              var ratio =  ww / mw; //calculate ratio
+              if( ww < mw){ //smaller than minimum size
+               $('#Viewport').attr('content', 'initial-scale=' + ratio + ', maximum-scale=' + ratio + ', minimum-scale=' + ratio + ', user-scalable=yes, width=' + ww);
+              }else{ //regular size
+               $('#Viewport').attr('content', 'initial-scale=1.0, maximum-scale=2, minimum-scale=1.0, user-scalable=yes, width=' + ww);
+              }
+            }
+            });
+        </script>
 
-    <button class="vote_go" id="vote_go" type="button">Submit</button>
-    <script type="text/javascript">
-        document.getElementById("vote_go").onclick = function () {
-            location.href = '{{ url_for('vote') }}';
-        };
-    </script>
-{% endblock %}
+        <!-- get the link to the css -->
+        <link rel="stylesheet" href="../static/css/main.css">
+
+    </head>
+
+    <body>
+        <button class="vote_go" id="vote_go" type="button">Submit</button>
+        <div>##########</div>
+        <input class="wait_bool" id="wait_bool" type="checkbox" onclick="toggleCheckBox(this)" checked="checked">wait_bool<br>
+
+        <script type="text/javascript" charset="utf-8">
+            var socket = io.connect('http://' + document.domain + ':' + location.port);
+
+            document.getElementById("vote_go").onclick = function () {
+                location.href = '{{ url_for('vote') }}';
+            };
+            function toggleCheckBox(element) {
+                var check = document.getElementById("wait_bool").checked
+                console.log('check changed' + check);
+                socket.emit('wait_card', {wait: check});
+            };
+
+        </script>
+    </body>
 
