--- a/app/static/css/voter.css
+++ b/app/static/css/voter.css
@@ -13,8 +13,41 @@ body {
     padding: 0px;
 }
 
-@media(min-width:600px){
-    html{font-size: 200%}
+@media screen and (min-width: 601px) {
+  .rate {
+    font-size: 70px;
+  }
+  .buttons{
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .rate {
+    font-size: 65px;
+  }
+  .buttons{
+    font-size: 24px;
+  }
+}
+
+
+@media screen and (max-width: 375px) {
+  .rate {
+    font-size: 60px;
+  }
+  .buttons{
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .rate {
+    font-size: 50px;
+  }
+  .buttons{
+    font-size: 18px;
+  }
 }
 
 
@@ -64,7 +97,6 @@ body {
 }
 
 
-
 .rate {
     display: inline-block;
     /* float: left; */
@@ -76,7 +108,7 @@ body {
     /*height: 13vh;*/
     max-width: 100vw;
     max-height: 14vh;
-    font-size: 250%;
+    /* font-size: 10vw; */
     line-height: 1.2;
     padding-right: 0.5vw;
     padding-bottom: 0.5vw;
