--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,25 +28,39 @@
         </script>
 
         <!-- get the link to the css -->
-        <link rel="stylesheet" href="../static/css/main.css">
+        <link rel="stylesheet" href="../static/css/index.css">
 
     </head>
 
     <body>
-        <button class="vote_go" id="vote_go" type="button">Submit</button>
-        <div>##########</div>
-        <input class="wait_bool" id="wait_bool" type="checkbox" onclick="toggleCheckBox(this)" checked="checked">wait_bool<br>
-
+        <div class="top_snap">
+        </div>
+        <div class="snap">
+            <div class="top_button">
+                <button class="button" id="vote_go" type="button">Vote</button>
+                <button class="button" id="info" type="button">Info</button>
+            </div>
+            <div class="bottom_button">
+                <button class="button" id="login" type="button">Login</button>
+                <button class="button" id="admin" type="button">Admin Page</button>
+            </div>
+        </div>
         <script type="text/javascript" charset="utf-8">
             var socket = io.connect('http://' + document.domain + ':' + location.port);
 
             document.getElementById("vote_go").onclick = function () {
                 location.href = '{{ url_for('vote') }}';
             };
-            function toggleCheckBox(element) {
-                var check = document.getElementById("wait_bool").checked
-                console.log('check changed' + check);
-                socket.emit('wait_card', {wait: check});
+
+            document.getElementById("info").onclick = function () {
+                location.href = '{{ url_for('info') }}';
+            };
+
+            document.getElementById("login").onclick = function () {
+                location.href = '{{ url_for('login') }}';
+            };
+            document.getElementById("admin").onclick = function () {
+                location.href = '{{ url_for('admin') }}';
             };
 
         </script>
