-  added colour info page for each colour breakdown - added power and toughess averages - begun adding waitcards between colours - added mulit threading - fixed previous card voting - fixed voting, now checks for who has voted rather than amount.

--- a/app/static/css/colour_info.css
+++ b/app/static/css/colour_info.css
@@ -164,56 +164,9 @@ table, th, td{
   border: 2px solid #3A559A;
   border-collapse: collapse;
   font: 22px Helvetica, Helvetica Neue, Arial;
+  background-color: #FFFFFF;
 }
 
-table.all_cards {
-  border: 1px solid #1C6EA4;
-  background-color: #EEEEEE;
-  width: 100%;
-  text-align: center;
-  border-collapse: collapse;
-}
-table.all_cards td, table.all_cards th {
-  border: 1px solid #AAAAAA;
-  padding: 3px 2px;
-}
-table.all_cards tbody td {
-  font-size: 13px;
-}
-table.all_cards tr:nth-child(even) {
-  background: #D0E4F5;
-}
-table.all_cards thead {
-  background: #1C6EA4;
-  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  border-bottom: 2px solid #444444;
-}
-table.all_cards thead th {
-  font-size: 15px;
-  font-weight: bold;
-  color: #FFFFFF;
-  text-align: center;
-  border-left: 2px solid #D0E4F5;
-}
-table.all_cards thead th:first-child {
-  border-left: none;
-}
-
-table.all_cards tfoot td {
-  font-size: 14px;
-}
-table.all_cards tfoot .links {
-  text-align: right;
-}
-table.all_cards tfoot .links a{
-  display: inline-block;
-  background: #1C6EA4;
-  color: #FFFFFF;
-  padding: 2px 8px;
-  border-radius: 5px;
-}
 
 .column {
   float: left;
