- wait cards fully implemented. - player csv output - average power and toughness fix - small minor bug fixes. - info screen updated

--- a/app/static/css/info.css
+++ b/app/static/css/info.css
@@ -230,6 +230,14 @@ table.all_cards tfoot .links a{
     border-radius: 16px;
 }
 
+.user{
+    text-align: center;
+}
+
+.h3{
+    text-align: center;
+}
+
 
 /* ==========================================================================
    Media Queries
