- updated vote number calculations to reflect newer system - same line power / toughness for space - highlight users who have voted - fixed delete user and remove voter options in admin

--- a/app/static/css/info.css
+++ b/app/static/css/info.css
@@ -160,6 +160,11 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
+mark {
+  background-color: aqua;
+  color: black;
+}
+
 table, th, td{
   border: 2px solid #3A559A;
   border-collapse: collapse;
