--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -176,7 +176,7 @@
                         // console.log('user: ' + data['user']);
                         var newuser = document.createElement ("div");
                         newuser.innerHTML = data['user'];
-                        newuser.value = data['user'];
+                        //newuser.value = data['user'];
                         newuser.className = "user";
                         newuser.style.border = "thin blue";
 
