--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -71,15 +71,15 @@
             };
 
             document.getElementById("del_user").onclick = function () {
-                var strUser = document.getElementById("users").value;
-                //var strUser = user.options[user.selectedIndex].value;
+                var user = document.getElementById("users");
+                var strUser = user.options[user.selectedIndex].text;
                 console.log('deluser ' + strUser);
                 socket.emit('del_user', strUser);
             };
 
             document.getElementById("remove_voter").onclick = function () {
-                //var strUser = document.getElementById("users").value;
-                var strUser = user.options[user.selectedIndex].value;
+                var user = document.getElementById("users");
+                var strUser = user.options[user.selectedIndex].text;
                 console.log('remove_voter ' + strUser);
                 socket.emit('remove_voter', strUser);
             };
