- complete restructure of files and folders - to implement testing

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,6 +33,7 @@
     </head>
 
     <body>
+        <title>Snappy</title>
         <div class="top_snap">
         </div>
         <div class="snap">
