--- a/app/templates/infonew.html
+++ b/app/templates/infonew.html
@@ -277,7 +277,8 @@
                       <span class="dot" onclick="currentSlide(3)"></span>
                     </div>
             </td>
-            <td class="tablebg"></td>
+            <td class="tablebg">
+            </td>
             <td  class="tablebg">
                 <div class="card_details">
                     <div class="cardinfo" id="cardinfo"></div>
